# ic

./: .gitignore  pytest.ini  readme.md  setup.cfg
.github/workflows/: ci-cd.yaml
.hypothesis/constants/: 0a8b7b75f3e36951  725fce756ae442e5  7bc36399737d4d45  82afdcce7140b4af  9118e7cfdc65b867  988fe9d21a7a2e9c  c7a923446d635f93  cf2d7e366ffc324e  d21e4f4f3bbd42de
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
doc/source/_static/: custom.css
doc/source/api/: ic.rst  modules.rst
doc/source/tutorial/: 01_setup.rst  02_ng20_export.rst  03_lda_training.rst  04_linecount_doctest_hypothesis.rst  05_typer_cli.rst  06_fastapi.rst  07_visualization.rst
models/: lda.pkl
scripts/: build_all.sh
src/ic/: __init__.py  command_line.py  lda.py  linecount.py  logging_config.py  ng20.py  visualization.py
tests/: test_lda.py  test_linecount.py  test_linecount_hypothesis.py  test_ng20.py
