[metadata]
name = ic
version = 0.1.0
author = Your Name
description = NG20 export, LDA training, and Document description CLI.
long_description = file: readme.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    numpy
    scikit-learn

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ic-ng20-export = ic.command_line:ng20_export_app
    ic-lda-train = ic.command_line:lda_train_app
    ic-lda-describe = ic.command_line:lda_describe_app

[options.extras_require]
dev = 
    pytest
    sphinx
    sphinx-rtd-theme
